# fasturl

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.rules/: code_style.md  project-overview.md  project_overview.md  testing.md
product-requirements/: api-endpoints.md  data-model.md  meta-analysis.md  requirements.md
src/fasturl/: main.py
tests/: test_demo.py
